# tempo

./: Cargo.toml  LICENSE  PHASE3_16_RESULTS.md  PRD.md  README.md
.github/workflows/: backend-deploy.yml  rust.yml
src/: audio_analyzer.rs  catalog.rs  hotkeys.rs  lib.rs  library.rs  main.rs  mpris.rs  playback.rs  single_instance.rs  snapshot.rs
src/app/: artwork.rs  browse_grids.rs  history.rs  hotkeys_panel.rs  library_state.rs  library_view.rs  menu.rs  mod.rs  player.rs  search.rs  settings.rs  sidebar.rs  table.rs  theme.rs  tooltip.rs
src/app/player/: entity.rs  mod.rs  render.rs
themes/: blue-hour.yaml  cocoa.yaml  cyberpunk-neon.yaml  forest-mist.yaml  midnight-plum.yaml  mono-slate.yaml  nocturne.yaml  paper-dawn.yaml  rose-quartz.yaml  signal-green.yaml  solar-flare.yaml
